Creating the theme of the App

--- a/metodista_app/pubspec.yaml
+++ b/metodista_app/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
         - asset: assets/fonts/Roboto-Regular.ttf
         - asset: assets/fonts/Roboto-Thin.ttf
         - asset: assets/fonts/Roboto-Bold.ttf
+        - asset: assets/fonts/Roboto-Italic.ttf
 
   assets:
     - assets/images/logo-square.png
