--- a/metodista_app/pubspec.yaml
+++ b/metodista_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
@@ -103,5 +104,5 @@ flutter:
     - assets/images/logo-horizontal.png
     - assets/images/cultos.png
     - assets/images/bebe-apontando.png
-    - assets/images/juventude.jpeg
+    - assets/images/juventude.png
     - assets/images/kids.png
