Contribute +  Abou Us sections

--- a/metodista_app/pubspec.yaml
+++ b/metodista_app/pubspec.yaml
@@ -106,3 +106,5 @@ flutter:
     - assets/images/bebe-apontando.png
     - assets/images/juventude.png
     - assets/images/kids.png
+    - assets/images/qrcode.png
+    - assets/images/banner-igreja.png
